Update with first week content

--- a/2013-09-07.md
+++ b/2013-09-07.md
@@ -1,1 +1,19 @@
-Hello World
+* I think the firewall issue that prevents opening IPython notebook on my web broswer has been challenging. 
+I spent a couple hours googling to no possible fix, but I think I will keep looking for now. 
+I haven't tried the IRC channel for IPython yet, maybe that would be the next place to start.   
+* The "Aha" moment was when I finally found a way to enter the BIOS settings on my Sony Vaio E Series. 
+There was no instruction on the booting screen whatsoever, and there are tons of models on the E-series, 
+which makes googling for solution almost impossible. I narrowed down to a few possible keys, 
+and it turned out that a combination of F1 and F2 finally let me into the BIOS setting.   
+
+One other "Aha" moment would probably be finally being able to registering my username on the IRC. 
+It may sound trivial to most, but after digging around, I finally found a 
+[helpful guide](http://www.zantherus.com/community/topic/2635-howto-connect-to-irc-with-pidgin/) 
+on how to do it on Ubuntu.   
+
+* If I could start all over, I would slow myself down a little bit. I tend to press 'Next' without carefully
+reading what is going on during installation, and that cost me once whilst installing Ubuntu Server. To those
+who are still working on getting Ubuntu Server working, I would advise them to follow the instructions carefully. 
+It's certainly not fun to get Ubuntu VM working, only to realize it's the Desktop version. Plus, if you need help, 
+ask for it. There's no shy in not being able to install stuff here and there. Being a CS major myself, I still 
+have trouble getting Ubuntu running inside Ubuntu D:
